src/objects/OM_GPO_Relationships__c.object
<CustomObject>
    <description>Junction object for relating Accounts to GPOs</description>
    <fields>
        <fullName>OM_Account__c</fullName>
        <description>For relating a GPO and Account together</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GPO Relationships</relationshipLabel>
        <relationshipName>GPO_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OM_GPO_Ranking__c</fullName>
        <description>Number field to rank the GPOs related to an account.</description>
        <inlineHelpText>Enter number equivalent to ranking. (e.g. Primary = 1, Secondary = 2)</inlineHelpText>
        <label>GPO Ranking</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_GPO__c</fullName>
        <description>For relating GPO to Account</description>
        <label>GPO</label>
        <referenceTo>OM_GPO__c</referenceTo>
        <relationshipLabel>Member Accounts</relationshipLabel>
        <relationshipName>GPO_Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>GPO Relationship</label>
    <nameField>
        <displayFormat>GPO-{000000}</displayFormat>
        <label>GPO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GPO Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>